KS-3700 [wiki] Comment label is not correctly aligned

--- a/eXoApplication/wiki/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/eXoApplication/wiki/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -1454,6 +1454,7 @@ table.UIFormGrid div.Id {
 	line-height: 15px;
 	width: 60px;
 	color: #636363;
+	margin-top: 5px;
 }
 
 .UIWikiPageEditForm .CommentInput input {
